--- a/trabajos/index.html
+++ b/trabajos/index.html
@@ -8,6 +8,6 @@
 <body>
 	<h1>Rancio</h1>
 	<!-- nombre del archo que queremos enlazar -->
-	<script src="codigo.js"></script>
+	<script src="ejercicio.js"></script>
 </body>
 </html>
