se hizo implementacion de ciclos y arrays

--- a/trabajos/index.html
+++ b/trabajos/index.html
@@ -6,8 +6,8 @@
 	<title></title>
 </head>
 <body>
-	<h1>Rancio</h1>
+	<h1></h1>
 	<!-- nombre del archo que queremos enlazar -->
-	<script src="ejercicio.js"></script>
+	<script src="codigo.js"></script>
 </body>
 </html>
